Response errors with 400 and 401 instead of 500